<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/radial_gradient_background">

    <ImageView
        android:id="@+id/backgroundSpeechBubble1"
        android:layout_width="258dp"
        android:layout_height="243dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:scaleX="-1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/speech_bubble_icon" />

    <ImageView
        android:id="@+id/backgroundSpeechBubble2"
        android:layout_width="249dp"
        android:layout_height="267dp"
        android:translationX = "-40dp"
        android:translationY = "30dp"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speech_bubble_icon" />

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="442dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:src="@drawable/logo_icon" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Talk2Friends"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_inputfield"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="8dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_inputfield"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="8dp" />

            <TextView
                android:id="@+id/incorrectLoginText"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/orange"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_gradient_background"
                android:gravity="center"
                android:text="Log In"
                app:backgroundTint="@null" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/linear_gradient_background"
                android:gravity="center"
                android:text="Sign Up"
                android:textSize="10sp"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>