<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/includeSharedBackground"
        layout="@layout/shared_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:gravity="center"
                android:text="Profile"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="italic"/>

            <include
                android:id="@+id/personal_box"
                layout="@layout/profile_personal_box" />

            <include
                android:id="@+id/friends_box"
                layout="@layout/profile_friends_box" />

            <include
                android:id="@+id/meetings_box"
                layout="@layout/profile_meetings_box" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/transparentGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/transparentGray"
        android:visibility="gone"/>

    <include
        android:id="@+id/edit_personal_box"
        layout="@layout/edit_personal_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:visibility="gone"
        />
    <include
        android:id="@+id/edit_friends_box"
        layout="@layout/edit_friends_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:visibility="gone"
        />
    <include
        android:id="@+id/edit_meeting_box"
        layout="@layout/edit_meeting_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:visibility="gone"
        />
    <include
        android:id="@+id/add_friends_page"
        layout="@layout/add_friends_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:visibility="gone"
        />
    <include
        android:id="@+id/add_interests_box"
        layout="@layout/add_interests_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>