...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/editButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginEnd="5dp"
                android:background="@drawable/linear_gradient_background"
                android:insetTop="0dp"
...
                android:scaleType="fitCenter"
                android:src="@drawable/edit_icon"
                app:backgroundTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:background="@drawable/linear_gradient_background"
                android:insetTop="0dp"
                android:insetBottom="0dp"
...
