...
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
